<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextDishName"
        android:layout_width="190dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:hint="@string/enter_resturant_name"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/textViewRestaurantNameLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRestaurantNameLabel"
        android:layout_width="81dp"
        android:layout_height="24dp"
        android:layout_below="@id/textViewDishNameLabel"
        android:layout_marginStart="44dp"
        android:layout_marginTop="92dp"
        android:text="@string/restaurant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRestaurantName"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:layout_below="@id/editTextDishName"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:hint="@string/enter_dish_name"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/textViewDishNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/editTextDishName" />


    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextRestaurantName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="84dp"
        android:text="@string/rate_meal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRestaurantName" />

    <TextView
        android:id="@+id/textViewDishNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSubmit"
        android:layout_marginStart="76dp"
        android:layout_marginTop="64dp"
        android:text="@string/dish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRestaurantNameLabel" />

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@id/textViewRestaurantNameLabel"
        android:text="@string/rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRestaurantName" />




</androidx.constraintlayout.widget.ConstraintLayout>